swagger docs and users endpoint updated
